k8s/postgresql/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  labels:
    app: gestion-produits
    variant: postgresql
    tier: database
spec:
  selector:
    app: gestion-produits
    variant: postgresql
    tier: database
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None  # Headless service
