k8s/postgresql/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-postgresql
  labels:
    app: gestion-produits
    variant: postgresql
    tier: frontend
spec:
  selector:
    app: gestion-produits
    variant: postgresql
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
